--- a/src/app/component/hnsearch/hnsearch.component.html
+++ b/src/app/component/hnsearch/hnsearch.component.html
@@ -5,12 +5,12 @@
 
   <body>
       <h1>Search HN</h1>
-  <form #hnSearchForm="ngForm" (ngSubmit)="onSubmit(hnSearchForm.value)">
-
-    <label for="search">Search</label>
-    <input type="text" [(ngModel)]="inputData" name="inputData" id="search"/>
-    <input type="submit" value="search">
-
+  <form #hnSearchForm="ngForm" (ngSubmit)="onSubmit(hnSearchForm.value)" >
+    <div align="center">
+      <label for="search">Search</label>
+      <input type="text" [(ngModel)]="inputData" name="inputData" id="search"/>
+      <input type="submit" value="search">
+    </div>
   </form>
 
   </body>
