--- a/src/app/component/hnsearch/hnsearch.component.html
+++ b/src/app/component/hnsearch/hnsearch.component.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-      <h1 style="text-align: center">Hackher News Search</h1>
+      <h1 style="text-align: center">Hacker News Search</h1>
   <form #hnSearchForm="ngForm" (ngSubmit)="onSubmit(hnSearchForm.value)" >
     <div align="center" style="border:transparent">
 
